# zmq-geant4

./: .gitignore  CMakeLists.txt  README.md  config.cmake
cmake/: version.h.in
cmake/Modules/: FindZMQ.cmake
patches/: G4VBasicShell.cc
tests/it/: CMakeLists.txt
tests/it/g4zsrv/: CMakeLists.txt  appbuilder.cc  eventaction.cc  main.cc  runaction.cc
tests/it/pyclient/: g4client.py
zmq/: CMakeLists.txt  G4ZMQServer.cc  G4ZMQServer.hh  version.h
